examples/solidity/bad/nobytecode.sol
pragma solidity ^0.4.24;

contract Abstract {
  function nothere() pure public {}
  function echidna_nothere() pure public {}
}
